# vvv17-demo-team-orange

./: .gitignore  CMakeLists.txt  CMakelists.txt  Presentation.pptx  README.md
app/scripts/: teamOrangeDemo.xml
pickAndPlace/: CMakeLists.txt  README.md
src/: CMakeLists.txt  clapDuo.xml
src/audio/: annotate_file.py  mic_server.py  prepare_data.py  rnn_model.py  server.py  speech_client.py  speech_server.py  test_mic.py
src/audio/models/: rnn_model.h5
src/master/: CMakeLists.txt  README.md  master.thrift  master.xml  master_thrift.cmake
src/master/include/: MASTER_IDL.h  master.h
src/master/src/: MASTER_IDL.cpp  main.cpp  master.cpp
src/moveGrounding/: CMakeLists.txt  moveGrounding.thrift  moveGrounding.xml
src/moveGrounding/include/: moveGroundingModule.h
src/moveGrounding/src/: main.cpp  moveGroundingModule.cpp  moveGroundingModule.h
src/moveGrounding/src/idl/: moveGrounding.cpp  moveGrounding.h  moveGrounding.thrift  moveGrounding_index.h  moveGrounding_index.txt  moveGrounding_indexALL.txt
src/movePlanner/: CMakeLists.txt  movePlanner.thrift  movePlanner.xml
src/movePlanner/include/: movePlanner.h  movePlanner.thrift  movePlanner_IDL.cpp  movePlanner_IDL.h  movePlanner_index.h  movePlanner_index.txt  movePlanner_indexALL.txt
src/movePlanner/src/: main.cpp  movePlanner.cpp  movePlanner.h  movePlanner_IDL.cpp
src/objectRecognition/: CMakeLists.txt  objectRecognition.xml
src/objectRecognition/src/: ObjectRecognition.cpp  ObjectRecognition.h  helpers.cpp  helpers.h  main.cpp  objectRecognition.cpp  objectRecognition.h
src/pickAndPlace/: CMakeLists.txt  pickAndPlace.xml
src/pickAndPlace/app/scripts/: pickAndPlace-app-icub.xml  pickAndPlace-app-icubSim.xml  pickAndPlace-system.xml  project_grasp-it-app-icubSim.xml
src/pickAndPlace/src/: main.cpp
